update linkedin icon, add new github svg icon

--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ email: srust.dev@srust.org
 # Social links
 twitter_username: srust
 github_username:  srust
+linkedin_username: srust-dev
 
 title: srust
 url: "https://srust.dev/"
