move more customizations out of _config and into individual _data

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,7 @@
 # Education Template
 - layout: left
   name: Valparaiso University
+  link: https://valpo.edu
   dates: May 2000
   location: Valparaiso, IN
   qualification: BSEE
