--- a/_data/more.yml
+++ b/_data/more.yml
@@ -1,6 +1,8 @@
 # More Section
 title: Interests / Accomplishments
 content: | # this will include new lines to allow paragraphs
-  I am an active contributor to open source software including Docker, Linux, md, Gnome. I am a Docker mentor, previously {code} catalyst, attend meetups and technical conferences.
+  I am an active contributor to open source software including Docker, Linux, md, Gnome. I am a Docker mentor, former {code} catalyst, attend meetups and technical conferences.
 
-  I have been granted patents US7448044, US8549582, US9195500
+  I have been granted patents [US7448044](https://patents.google.com/patent/US7448044), [US8549582](https://patents.google.com/patent/US8549582), [US9195500](https://patents.google.com/patent/US9195500)
+
+  I enjoy reading, hiking, projects around the house, learning new things. And I'm a black belt in Aikido.
